fix components in dark mode

--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -76,4 +76,11 @@
       border-bottom: 1px solid #ccc;
     }
   }
+
+  /**
+   * Buttons
+   */
+  & .btn-dark {
+    background-color: #333;
+  }
 }
